<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- The Basics -->
    <parent>
        <groupId>org.orbisgis</groupId>
        <artifactId>orbisgis-nexus</artifactId>
        <version>3</version>
    </parent>
    <artifactId>framework</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>root</module>
        <module>bundle-manager-api</module>
        <module>bundle-manager</module>
        <module>dist</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>YYYY-MM-dd</maven.build.timestamp.format>
        <buildNumber>${maven.build.timestamp}</buildNumber>
    </properties>

    <!-- Dependencies -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>org.osgi.enterprise</artifactId>
                <version>5.0.0</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>org.osgi.core</artifactId>
                <version>6.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-console</artifactId>
                <version>2.5.2</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.6</version>
            </dependency>
            <dependency>
                <groupId>org.apache.felix</groupId>
                <artifactId>org.apache.felix.main</artifactId>
                <version>6.0.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.felix</groupId>
                <artifactId>org.osgi.service.obr</artifactId>
                <version>1.0.2</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.25</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.2.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit</artifactId>
                <version>5.2.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.github.stefanbirkner</groupId>
                <artifactId>system-rules</artifactId>
                <version>1.18.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.3.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.drombler.fx</groupId>
                <artifactId>drombler-fx-startup-main</artifactId>
                <version>0.13</version>
            </dependency>
            <dependency>
                <groupId>org.drombler.acp</groupId>
                <artifactId>drombler-acp-startup-main</artifactId>
                <version>0.13</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Build Settings -->
    <build>
        <pluginManagement>
            <plugins>
                <!-- Configure the exec:exec goal -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.6.0</version>
                    <configuration>
                        <executable>java</executable>
                        <classpathScope>runtime</classpathScope>
                        <workingDirectory>target/</workingDirectory>
                        <arguments>
                            <argument>-classpath</argument>
                            <classpath/>
                            <argument>org.orbisgis.framework.root.Main</argument>
                        </arguments>
                    </configuration>
                </plugin>
                <!-- Generation of the OSGI bundle -->
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>3.5.1</version>
                    <extensions>true</extensions>
                    <configuration>
                        <instructions>
                            <Bundle-Vendor>Lab-STICC - CNRS UMR 6285</Bundle-Vendor>
                        </instructions>
                    </configuration>
                </plugin>
                <!-- Compilation -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>8</source>
                        <target>8</target>
                    </configuration>
                </plugin>
                <!-- Test -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.21.0</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.platform</groupId>
                            <artifactId>junit-platform-surefire-provider</artifactId>
                            <version>1.2.0</version>
                        </dependency>
                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>5.2.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <!-- Distribution archive build -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.0</version>
                    <configuration>
                        <descriptors>
                            <descriptor>src/main/assembly/bin.xml</descriptor>
                        </descriptors>
                    </configuration>
                </plugin>
                <!-- Copy dependencies -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.1</version>
                    <executions>
                        <execution>
                            <id>copy-dependencies</id>
                            <goals>
                                <goal>copy-dependencies</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${project.build.directory}/bundle/</outputDirectory>
                                <overWriteReleases>false</overWriteReleases>
                                <overWriteSnapshots>true</overWriteSnapshots>
                                <overWriteIfNewer>true</overWriteIfNewer>
                                <excludeTransitive>false</excludeTransitive>
                                <stripVersion>true</stripVersion>
                                <includeScope>provided</includeScope>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <!-- Build JAR -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.1.0</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <mainClass>org.orbisgis.framework.root.Main</mainClass>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <!-- More Project Information -->
    <name>Framework</name>
    <description>Basic OSGI framework</description>
    <url>https://github.com/orbisgis/framework</url>
    <licenses>
        <license>
            <name>The GNU General Public License, Version 3.0</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>Lab-STICC - CNRS UMR 6285</name>
        <url>https://www.labsticc.fr</url>
    </organization>
    <developers>
        <developer>
            <name>Erwan Bocher</name>
            <id>ebocher</id>
            <url>https://github.com/ebocher</url>
            <organization>Lab-STICC - CNRS UMR 6285</organization>
            <organizationUrl>Lab-STICC - CNRS UMR 6285</organizationUrl>
        </developer>
        <developer>
            <name>Sylvain Palominos</name>
            <id>SPalominos</id>
            <url>https://github.com/spalominos</url>
            <organization>Lab-STICC - CNRS UMR 6285</organization>
            <organizationUrl>Lab-STICC - CNRS UMR 6285</organizationUrl>
        </developer>
    </developers>

    <!-- Environment Settings -->
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/orbisgis/framework/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Travis CI</system>
        <url>https://travis-ci.com/orbisgis/framework</url>
    </ciManagement>
    <scm>
        <connection>scm:git:git://github.com/orbisgis/framework</connection>
    </scm>
    <repositories>
        <repository>
            <id>orbisgis-nexus</id>
            <name>OrbisGIS nexus repository</name>
            <url>http://nexus.orbisgis.org/content/repositories/osgi-maven</url>
        </repository>
    </repositories>
</project>